# kate-browser-plugin

./: CMakeLists.txt  MyBrowserPlugin.cpp  MyBrowserPlugin.h  README.md  plugin.json
